// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LogViewer > does not linkify non http/https urls 1`] = `
<div
  class="line_faojhcs"
>
  <span
    class="number_f90q0xh"
  >
    1
  </span>
  <span
    class="line_faojhcs"
  >
    <span>
      <span>
        this string: gs://path is a GCS path
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer > linkifies standalone https urls 1`] = `
<div
  class="line_faojhcs"
>
  <span
    class="number_f90q0xh"
  >
    1
  </span>
  <span
    class="line_faojhcs"
  >
    <span>
      <span>
        this string: 
      </span>
    </span>
    <span>
      <a
        class="a_fj90q9w"
        href="https://path.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        https://path.com
      </a>
    </span>
    <span>
      <span>
         is a url
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer > linkifies standalone urls 1`] = `
<div
  class="line_faojhcs"
>
  <span
    class="number_f90q0xh"
  >
    1
  </span>
  <span
    class="line_faojhcs"
  >
    <span>
      <span>
        this string: 
      </span>
    </span>
    <span>
      <a
        class="a_fj90q9w"
        href="http://path.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        http://path.com
      </a>
    </span>
    <span>
      <span>
         is a url
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer > linkifies substring urls 1`] = `
<div
  class="line_faojhcs"
>
  <span
    class="number_f90q0xh"
  >
    1
  </span>
  <span
    class="line_faojhcs"
  >
    <span>
      <span>
        this string:
      </span>
    </span>
    <span>
      <a
        class="a_fj90q9w"
        href="http://path.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        http://path.com
      </a>
    </span>
    <span>
      <span>
         is a url
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer > renders a multi-line log 1`] = `
<div
  class="line_faojhcs"
>
  <span
    class="number_f90q0xh"
  >
    1
  </span>
  <span
    class="line_faojhcs"
  >
    <span>
      <span>
        Lorem Ipsum is simply dummy text of the printing and typesetting
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer > renders a row with error 1`] = `
<div
  class="line_faojhcs"
>
  <span
    class="number_f90q0xh"
    style="background-color: rgb(112, 0, 0); color: white;"
  >
    1
  </span>
  <span
    class="line_faojhcs"
    style="background-color: rgb(112, 0, 0); color: white;"
  >
    <span>
      <span>
        line1 with error
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer > renders a row with error word as substring 1`] = `
<div
  class="line_faojhcs"
>
  <span
    class="number_f90q0xh"
    style="background-color: rgb(112, 0, 0); color: white;"
  >
    1
  </span>
  <span
    class="line_faojhcs"
    style="background-color: rgb(112, 0, 0); color: white;"
  >
    <span>
      <span>
        line1 with errorWord
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer > renders a row with given index as line number 1`] = `
<div
  class="line_faojhcs"
>
  <span
    class="number_f90q0xh"
  >
    1
  </span>
  <span
    class="line_faojhcs"
  >
    <span>
      <span>
        line1
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer > renders a row with upper case error 1`] = `
<div
  class="line_faojhcs"
>
  <span
    class="number_f90q0xh"
    style="background-color: rgb(112, 0, 0); color: white;"
  >
    1
  </span>
  <span
    class="line_faojhcs"
    style="background-color: rgb(112, 0, 0); color: white;"
  >
    <span>
      <span>
        line1 with ERROR
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer > renders a row with upper case warning 1`] = `
<div
  class="line_faojhcs"
>
  <span
    class="number_f90q0xh"
    style="background-color: rgb(84, 84, 0); color: white;"
  >
    1
  </span>
  <span
    class="line_faojhcs"
    style="background-color: rgb(84, 84, 0); color: white;"
  >
    <span>
      <span>
        line1 with WARNING
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer > renders a row with warn 1`] = `
<div
  class="line_faojhcs"
>
  <span
    class="number_f90q0xh"
    style="background-color: rgb(84, 84, 0); color: white;"
  >
    1
  </span>
  <span
    class="line_faojhcs"
    style="background-color: rgb(84, 84, 0); color: white;"
  >
    <span>
      <span>
        line1 with warn
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer > renders a row with warning 1`] = `
<div
  class="line_faojhcs"
>
  <span
    class="number_f90q0xh"
    style="background-color: rgb(84, 84, 0); color: white;"
  >
    1
  </span>
  <span
    class="line_faojhcs"
    style="background-color: rgb(84, 84, 0); color: white;"
  >
    <span>
      <span>
        line1 with warning
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer > renders a row with warning word as substring 1`] = `
<div
  class="line_faojhcs"
>
  <span
    class="number_f90q0xh"
    style="background-color: rgb(84, 84, 0); color: white;"
  >
    1
  </span>
  <span
    class="line_faojhcs"
    style="background-color: rgb(84, 84, 0); color: white;"
  >
    <span>
      <span>
        line1 with warning:something
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer > renders an empty container when no logs passed 1`] = `
<DocumentFragment>
  <div
    style="overflow: visible; height: 0px; width: 0px;"
  >
    <div
      aria-label="grid"
      aria-readonly="true"
      class="ReactVirtualized__Grid ReactVirtualized__List root_f17jcl2y"
      id="logViewer"
      role="grid"
      style="box-sizing: border-box; direction: ltr; height: 0px; position: relative; width: 0px; -webkit-overflow-scrolling: touch; will-change: transform; overflow-x: hidden; overflow-y: hidden;"
      tabindex="0"
    />
  </div>
  <div
    class="resize-triggers"
  >
    <div
      class="expand-trigger"
    >
      <div
        style="width: 1px; height: 1px;"
      />
    </div>
    <div
      class="contract-trigger"
    />
  </div>
</DocumentFragment>
`;

exports[`LogViewer > renders one log line 1`] = `
<div
  class="line_faojhcs"
>
  <span
    class="number_f90q0xh"
  >
    1
  </span>
  <span
    class="line_faojhcs"
  >
    <span>
      <span>
        first line
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer > renders one long line without breaking 1`] = `
<div
  class="line_faojhcs"
>
  <span
    class="number_f90q0xh"
  >
    1
  </span>
  <span
    class="line_faojhcs"
  >
    <span>
      <span>
        Lorem Ipsum is simply dummy text of the printing and typesettingindustry. Lorem Ipsum has been the industry's standard dummy text eversince the 1500s, when an unknown printer took a galley of type andscrambled it to make a type specimen book. It has survived not only fivecenturies, but also the leap into electronic typesetting, remainingessentially unchanged. It was popularised in the 1960s with the releaseof Letraset sheets containing Lorem Ipsum passages, and more recentlywith desktop publishing software like Aldus PageMaker including versionsof Lorem Ipsum.
      </span>
    </span>
  </span>
</div>
`;

exports[`LogViewer > renders two log lines 1`] = `
<div
  class="line_faojhcs"
>
  <span
    class="number_f90q0xh"
  >
    1
  </span>
  <span
    class="line_faojhcs"
  >
    <span>
      <span>
        first line
      </span>
    </span>
  </span>
</div>
`;
